updated DatasetUtils and JavaParserUtils to new API