@@ -3,7 +3,11 @@ package star.tratto.util.javaparser;
 import com.github.javaparser.JavaParser;
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.PackageDeclaration;
-import com.github.javaparser.ast.body.*;
+import com.github.javaparser.ast.body.CallableDeclaration;
+import com.github.javaparser.ast.body.FieldDeclaration;
+import com.github.javaparser.ast.body.MethodDeclaration;
+import com.github.javaparser.ast.body.TypeDeclaration;
+import com.github.javaparser.ast.body.VariableDeclarator;
 import com.github.javaparser.resolution.MethodUsage;
 import com.github.javaparser.resolution.UnsolvedSymbolException;
 import com.github.javaparser.resolution.declarations.ResolvedDeclaration;
@@ -24,7 +28,11 @@ import star.tratto.data.ResolvedTypeNotFound;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -54,7 +62,7 @@ public class JavaParserUtilsTest {
     }
 
     @Test
-    public void getResolvedTypeOfExpressionPrimitiveObject() {
+    public void getResolvedTypeOfExpressionObjectTest() {
         OracleDatapoint oracleDatapoint = oracleDatapoints.get(1);
         TypeDeclaration<?> jpClass = getClassOrInterface(oracleDatapoint.getClassSourceCode(), oracleDatapoint.getClassName());
         CallableDeclaration<?> jpCallable = getMethodDeclaration(oracleDatapoint.getMethodSourceCode());
@@ -316,7 +324,7 @@ public class JavaParserUtilsTest {
         TypeDeclaration<?> jpClass = getClassOrInterface(oracleDatapoint.getClassSourceCode(), oracleDatapoint.getClassName());
         FieldDeclaration jpField = jpClass.getFields().get(0);
         VariableDeclarator jpVariable = jpField.getVariable(0);
-        String variableSignature = getVariableSignature(jpField, jpVariable);
+        String variableSignature = getVariableDeclaration(jpField, jpVariable);
         assertEquals("private static final long serialVersionUID = -7726511984200295583L;", variableSignature);
     }
 
@@ -325,7 +333,7 @@ public class JavaParserUtilsTest {
         OracleDatapoint oracleDatapoint = oracleDatapoints.get(1);
         TypeDeclaration<?> jpClass = getClassOrInterface(oracleDatapoint.getClassSourceCode(), oracleDatapoint.getClassName());
         FieldDeclaration jpField = jpClass.getFields().get(0);
-        String fieldSignature = getFieldSignature(jpField.resolve());
+        String fieldSignature = getFieldDeclaration(jpField.resolve());
         // not able to retrieve "final" keyword and assignment value from ResolvedFieldDeclaration.
         assertEquals("private static long serialVersionUID;", fieldSignature);
     }
@@ -420,7 +428,7 @@ public class JavaParserUtilsTest {
         MethodUsage methodUsage = new ArrayList<>(getResolvedReferenceTypeDeclaration(packageClass).getAllMethods()
                 .stream()
                 .sorted(Comparator.comparing(MethodUsage::toString))
-                .collect(Collectors.toList()))
+                .toList())
                 .stream()
                 .filter(method -> method.getName().equals(methodName))
                 .findFirst().get();
@@ -469,7 +477,7 @@ public class JavaParserUtilsTest {
         CallableDeclaration<?> jpCallable = getMethodDeclaration(oracleDatapoint.getMethodSourceCode());
         String typeName = "T";
         assertNotNull(jpCallable);
-        assertTrue(isGenericType(typeName, jpCallable, jpClass));
+        assertTrue(isTypeParameter(typeName, jpCallable, jpClass));
     }
 
     @Test
